# strebflow

./: .gitignore  Dockerfile  Makefile  PROMPT.md  README.md  demo_tui.py  docker-compose.yml  pipeline_config.yaml  pyproject.toml
docs/superpowers/plans/: 2026-03-27-attractor-pipeline.md  2026-03-28-diff-optimization.md  2026-03-28-pipeline-tui-dag.md  2026-03-29-claude-code-provider.md
docs/superpowers/specs/: 2026-03-26-attractor-pipeline-design.md  2026-03-28-diff-optimization-design.md  2026-03-28-pipeline-tui-dag-design.md  2026-03-29-claude-code-provider-design.md
k8s/: configmap.yaml  job-template.yaml  pvc.yaml  rbac.yaml  secret-template.yaml
specs/: sample-scenarios.md  sample-spec.md
src/attractor/: __init__.py  __main__.py  config.py  graph.py  llm_client.py  logging.py  state.py  tui.py  workspace.py
src/attractor/nodes/: __init__.py  diagnoser.py  done.py  implementer.py  planner.py  reviewer.py  scenario_validator.py  spec_loader.py  test_runner.py
src/attractor/tools/: __init__.py  file_tools.py  search_tools.py  shell_tools.py
tests/: test_config.py  test_graph.py  test_llm_client.py  test_nodes.py  test_state.py  test_tools.py  test_tui.py  test_workspace.py
