[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "attractor"
version = "0.1.0"
description = "LangGraph-based agentic coding pipeline"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
